# OpenJVS-Updated-libgpiod

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: BLUETOOTH_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  SYSTEM_357_COMPATIBILITY.md  TAIKO_COMPATIBILITY.md  TESTING_GUIDE.md  guide.md  modernjvs.service  modernjvs@.service  wiimote.conf
docs/modernjvs/: config
docs/modernjvs/devices/: g25-racing-wheel  logitech--logitech-momo-force-  logitech-g29-driving-force-racing-wheel  logitech-logitech-driving-force  microsoft-x-box-360-pad  nintendo-wii-remote  nintendo-wii-remote-nunchuk  thrustmaster-t.flight-hotas-  xbox-wireless-controller
docs/modernjvs/games/: taiko-no-tatsujin  time-crisis-3
docs/modernjvs/ios/: capcom-naomi  namco-na-jv2  namco-rays  namco-taiko  namco-v221  namco-v222  sega-838-13683B  sega-type-2  taito-type-x
docs/openjvs/: config
src/: modernjvs.c  openjvs.c  version.h.in
src/console/: cli.c  config.c  config.h  debug.c  debug.h  watchdog.c
src/controller/: input.c  input.h
src/ffb/: ffb.c  ffb.h
src/hardware/: device.c  rotary.c
src/jvs/: io.c  jvs.c  jvs.h
